default/objects/Integration_Status__c/Integration_Status__c.object-meta.xml
<CustomObject>
    <description>An object to track Integration statuses for objects in the Salesforce Org.</description>
    <label>Integration Status</label>
    <nameField>
        <displayFormat>IS-{0000000000}</displayFormat>
        <label>Integration Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>