default/objects/Integration_Status__c/fields/Create_Integration_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Integration_Success_Date__c</fullName>
    <label>Create Integration Success Date</label>
    <type>DateTime</type>
</CustomField>