default/objects/Integration_Status__c/fields/Create_Integration_Try_Count__c.field-meta.xml
<CustomField>
    <fullName>Create_Integration_Try_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Create Integration Try Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>