default/objects/Integration_Status__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <formula>IF(Status__c != &apos;Success&apos;, 
Integration_Last_Error_Message__c, 
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Error Message</label>
    <type>Text</type>
</CustomField>