default/objects/Integration_Status__c/fields/Integration_Last_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Integration_Last_Error_Code__c</fullName>
    <label>Integration Last Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>