default/objects/Integration_Status__c/fields/Integration_Last_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Last_Error_Message__c</fullName>
    <label>Integration Last Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>