default/objects/Integration_Status__c/fields/Linked_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Linked_Object_API_Name__c</fullName>
    <label>Linked Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>