default/objects/Integration_Status__c/fields/Linked_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Object_Id__c</fullName>
    <description>The Id value for the linked record.</description>
    <label>Linked Object Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>