default/objects/Integration_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( 
ISPICKVAL(Create_Integration_Status__c, &apos;FAIL&apos;) 
|| ISPICKVAL(Update_Integration_Status__c, &apos;FAIL&apos;), &apos;Failed&apos;, 
IF(ISPICKVAL(Create_Integration_Status__c, &apos;SUCCESS&apos;) || 
ISPICKVAL(Update_Integration_Status__c, &apos;SUCCESS&apos;), &apos;Success&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>