default/objects/Integration_Status__c/fields/Update_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Integration_Status__c</fullName>
    <label>Update Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Status</valueSetName>
    </valueSet>
</CustomField>