default/objects/Integration_Status__c/fields/Update_Integration_Success_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Integration_Success_Date__c</fullName>
    <label>Update Integration Success Date</label>
    <type>DateTime</type>
</CustomField>