default/objects/Integration_Status__c/fields/Update_Needed_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Needed_Date__c</fullName>
    <label>Update Needed Date</label>
    <type>DateTime</type>
</CustomField>