default/objects/Integration_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Linked_Object_API_Name__c</columns>
    <columns>Linked_Object_Id__c</columns>
    <columns>Update_Integration_Status__c</columns>
    <columns>Update_Integration_Success_Date__c</columns>
    <columns>Update_Integration_Try_Count__c</columns>
    <columns>Update_Needed_Date__c</columns>
    <columns>Integration_Last_Error_Code__c</columns>
    <columns>Integration_Last_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>